Change the margins

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -245,7 +245,7 @@ $late: 			#ffc75f;
 	width: 15%;
 	@include box-sizing(border-box);
 	padding: 8px 8px 0 8px;
-	margin: 15px;
+	margin: 2.1%;
 	cursor: pointer;
 
 	background: $person;
