--- a/sass/partials/_mediaqueries.scss
+++ b/sass/partials/_mediaqueries.scss
@@ -14,6 +14,7 @@
 	.person
 	{
 		width: 18%;
+		margin: 3%;
 	}
 }
 
@@ -21,6 +22,7 @@
 	.person
 	{
 		width: 25%;
+		margin: 3.5%;
 	}
 }
 
@@ -28,6 +30,7 @@
 	.person
 	{
 		width: 40%;
+		margin: 4%;
 	}
 }
 
