--- a/sass/partials/_typo.scss
+++ b/sass/partials/_typo.scss
@@ -23,7 +23,7 @@ html
 body
 {
     font-size: 0.9em;
-    font-family: arial, sans-serif;
+    font-family: 'Raleway', arial, sans-serif;
     line-height: 1.4em;
     color: $texte;
     text-align: left;
