--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -73,41 +73,36 @@ $logo-color: #fefefe;
 }
 
 
-
 /***********************************************************************************/
 /* Nav */
 $button:        		$header;
-$button-color:  		inherit;
 $nav:	        		$header;
-$nav-color:     		inherit;
-$menu-color: 			inherit;
 $notifications: 		$logo;
 $notifications-color: 	$logo-color;
 
-#nav
+.nav
 {
 	position: fixed;
-	top: 50px;
+	top: 0;
 	width: 200px;
 	height: 100%;
 	background: $nav;
-	color: $nav-color;
 	z-index: 1;
+	overflow: auto;
 	
 	@include transition(all ease 0.4s);
 }
 
-.button-menu
+#button-menu
 {
 	display: none;
+	@include transition(all ease 0.4s);
 }
 
-#menu
+.menu
 {
-	height: 100%;
-	color: $menu-color;
-	@include pie-clearfix;
 	cursor: pointer;
+	margin: 50px 0 0 0;
 
 	@include transition(all ease 0.4s);
 
@@ -122,8 +117,9 @@ $notifications-color: 	$logo-color;
 	display: inline-block;
 	width: 100%;
 	padding: 8px 13px;
-	float: left;
 	@include box-sizing(border-box);
+
+	@include transition(all ease 0.4s);
 
 	&:hover, &:active, &:focus
 	{
@@ -141,30 +137,6 @@ $notifications-color: 	$logo-color;
 		@include border-radius(50px);
 		padding: 0 8px; 
 	}
-}
-
-/* Code pour la version tablettes et mobiles */
-#nav-open
-{
-	position: fixed;
-	top: 50px;
-	width: 200px;
-	height: 100%;
-	background: $nav;
-	color: $nav-color;
-	z-index: 1;
-	
-	@include transition(all ease 0.4s);
-}
-
-#menu-open
-{
-	height: 100%;
-	color: $menu-color;
-	@include pie-clearfix;
-	cursor: pointer;
-
-	@include transition(all ease 0.4s);
 }
 
 
