Change li to div for form

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -228,6 +228,14 @@ $away: 			#ffa9a9;
 	cursor: pointer;
 
 	background: $person;
+
+}
+
+.person-hidden
+{
+	display: none;
+	opacity: 0;
+
 }
 
 .away
